interpreter/Parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On T_fun shift to state 1
-- On program shift to state 40
-- On header shift to state 41
-- On func_def shift to state 143
## Reductions:

State 1:
## Known stack suffix:
## T_fun
## LR(1) items:
header -> T_fun . T_id T_lparen fpar_def semi_fpar_def_list T_rparen T_colon ret_type [ T_var T_semicolon T_lbrace T_fun ]
header -> T_fun . T_id T_lparen T_rparen T_colon ret_type [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
-- On T_id shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## T_fun T_id
## LR(1) items:
header -> T_fun T_id . T_lparen fpar_def semi_fpar_def_list T_rparen T_colon ret_type [ T_var T_semicolon T_lbrace T_fun ]
header -> T_fun T_id . T_lparen T_rparen T_colon ret_type [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
-- On T_lparen shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## T_fun T_id T_lparen
## LR(1) items:
header -> T_fun T_id T_lparen . fpar_def semi_fpar_def_list T_rparen T_colon ret_type [ T_var T_semicolon T_lbrace T_fun ]
header -> T_fun T_id T_lparen . T_rparen T_colon ret_type [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
-- On T_rparen shift to state 4
-- On T_ref shift to state 11
-- On T_id shift to state 28
-- On fpar_def shift to state 32
## Reductions:

State 4:
## Known stack suffix:
## T_fun T_id T_lparen T_rparen
## LR(1) items:
header -> T_fun T_id T_lparen T_rparen . T_colon ret_type [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
-- On T_colon shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## T_fun T_id T_lparen T_rparen T_colon
## LR(1) items:
header -> T_fun T_id T_lparen T_rparen T_colon . ret_type [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
-- On T_nothing shift to state 6
-- On T_int shift to state 7
-- On T_char shift to state 8
-- On ret_type shift to state 9
-- On data_type shift to state 10
## Reductions:

State 6:
## Known stack suffix:
## T_nothing
## LR(1) items:
ret_type -> T_nothing . [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
## Reductions:
-- On T_var T_semicolon T_lbrace T_fun
--   reduce production ret_type -> T_nothing

State 7:
## Known stack suffix:
## T_int
## LR(1) items:
data_type -> T_int . [ T_var T_semicolon T_rparen T_lbrack T_lbrace T_fun ]
## Transitions:
## Reductions:
-- On T_var T_semicolon T_rparen T_lbrack T_lbrace T_fun
--   reduce production data_type -> T_int

State 8:
## Known stack suffix:
## T_char
## LR(1) items:
data_type -> T_char . [ T_var T_semicolon T_rparen T_lbrack T_lbrace T_fun ]
## Transitions:
## Reductions:
-- On T_var T_semicolon T_rparen T_lbrack T_lbrace T_fun
--   reduce production data_type -> T_char

State 9:
## Known stack suffix:
## T_fun T_id T_lparen T_rparen T_colon ret_type
## LR(1) items:
header -> T_fun T_id T_lparen T_rparen T_colon ret_type . [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
## Reductions:
-- On T_var T_semicolon T_lbrace T_fun
--   reduce production header -> T_fun T_id T_lparen T_rparen T_colon ret_type

State 10:
## Known stack suffix:
## data_type
## LR(1) items:
ret_type -> data_type . [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
## Reductions:
-- On T_var T_semicolon T_lbrace T_fun
--   reduce production ret_type -> data_type

State 11:
## Known stack suffix:
## T_ref
## LR(1) items:
fpar_def -> T_ref . T_id comma_id_list T_colon fpar_type [ T_semicolon T_rparen ]
## Transitions:
-- On T_id shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## T_ref T_id
## LR(1) items:
fpar_def -> T_ref T_id . comma_id_list T_colon fpar_type [ T_semicolon T_rparen ]
## Transitions:
-- On T_comma shift to state 13
-- On comma_id_list shift to state 16
## Reductions:
-- On T_colon
--   reduce production comma_id_list ->

State 13:
## Known stack suffix:
## T_comma
## LR(1) items:
comma_id_list -> T_comma . T_id comma_id_list [ T_colon ]
## Transitions:
-- On T_id shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## T_comma T_id
## LR(1) items:
comma_id_list -> T_comma T_id . comma_id_list [ T_colon ]
## Transitions:
-- On T_comma shift to state 13
-- On comma_id_list shift to state 15
## Reductions:
-- On T_colon
--   reduce production comma_id_list ->

State 15:
## Known stack suffix:
## T_comma T_id comma_id_list
## LR(1) items:
comma_id_list -> T_comma T_id comma_id_list . [ T_colon ]
## Transitions:
## Reductions:
-- On T_colon
--   reduce production comma_id_list -> T_comma T_id comma_id_list

State 16:
## Known stack suffix:
## T_ref T_id comma_id_list
## LR(1) items:
fpar_def -> T_ref T_id comma_id_list . T_colon fpar_type [ T_semicolon T_rparen ]
## Transitions:
-- On T_colon shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## T_ref T_id comma_id_list T_colon
## LR(1) items:
fpar_def -> T_ref T_id comma_id_list T_colon . fpar_type [ T_semicolon T_rparen ]
## Transitions:
-- On T_int shift to state 7
-- On T_char shift to state 8
-- On fpar_type shift to state 18
-- On data_type shift to state 19
## Reductions:

State 18:
## Known stack suffix:
## T_ref T_id comma_id_list T_colon fpar_type
## LR(1) items:
fpar_def -> T_ref T_id comma_id_list T_colon fpar_type . [ T_semicolon T_rparen ]
## Transitions:
## Reductions:
-- On T_semicolon T_rparen
--   reduce production fpar_def -> T_ref T_id comma_id_list T_colon fpar_type

State 19:
## Known stack suffix:
## data_type
## LR(1) items:
fpar_type -> data_type . T_lbrack T_rbrack bracket_int_const_list [ T_semicolon T_rparen ]
fpar_type -> data_type . bracket_int_const_list [ T_semicolon T_rparen ]
## Transitions:
-- On T_lbrack shift to state 20
-- On bracket_int_const_list shift to state 27
## Reductions:
-- On T_semicolon T_rparen
--   reduce production bracket_int_const_list ->

State 20:
## Known stack suffix:
## data_type T_lbrack
## LR(1) items:
bracket_int_const_list -> T_lbrack . T_int_const T_rbrack bracket_int_const_list [ T_semicolon T_rparen ]
fpar_type -> data_type T_lbrack . T_rbrack bracket_int_const_list [ T_semicolon T_rparen ]
## Transitions:
-- On T_rbrack shift to state 21
-- On T_int_const shift to state 23
## Reductions:

State 21:
## Known stack suffix:
## data_type T_lbrack T_rbrack
## LR(1) items:
fpar_type -> data_type T_lbrack T_rbrack . bracket_int_const_list [ T_semicolon T_rparen ]
## Transitions:
-- On T_lbrack shift to state 22
-- On bracket_int_const_list shift to state 26
## Reductions:
-- On T_semicolon T_rparen
--   reduce production bracket_int_const_list ->

State 22:
## Known stack suffix:
## T_lbrack
## LR(1) items:
bracket_int_const_list -> T_lbrack . T_int_const T_rbrack bracket_int_const_list [ T_semicolon T_rparen ]
## Transitions:
-- On T_int_const shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## T_lbrack T_int_const
## LR(1) items:
bracket_int_const_list -> T_lbrack T_int_const . T_rbrack bracket_int_const_list [ T_semicolon T_rparen ]
## Transitions:
-- On T_rbrack shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## T_lbrack T_int_const T_rbrack
## LR(1) items:
bracket_int_const_list -> T_lbrack T_int_const T_rbrack . bracket_int_const_list [ T_semicolon T_rparen ]
## Transitions:
-- On T_lbrack shift to state 22
-- On bracket_int_const_list shift to state 25
## Reductions:
-- On T_semicolon T_rparen
--   reduce production bracket_int_const_list ->

State 25:
## Known stack suffix:
## T_lbrack T_int_const T_rbrack bracket_int_const_list
## LR(1) items:
bracket_int_const_list -> T_lbrack T_int_const T_rbrack bracket_int_const_list . [ T_semicolon T_rparen ]
## Transitions:
## Reductions:
-- On T_semicolon T_rparen
--   reduce production bracket_int_const_list -> T_lbrack T_int_const T_rbrack bracket_int_const_list

State 26:
## Known stack suffix:
## data_type T_lbrack T_rbrack bracket_int_const_list
## LR(1) items:
fpar_type -> data_type T_lbrack T_rbrack bracket_int_const_list . [ T_semicolon T_rparen ]
## Transitions:
## Reductions:
-- On T_semicolon T_rparen
--   reduce production fpar_type -> data_type T_lbrack T_rbrack bracket_int_const_list

State 27:
## Known stack suffix:
## data_type bracket_int_const_list
## LR(1) items:
fpar_type -> data_type bracket_int_const_list . [ T_semicolon T_rparen ]
## Transitions:
## Reductions:
-- On T_semicolon T_rparen
--   reduce production fpar_type -> data_type bracket_int_const_list

State 28:
## Known stack suffix:
## T_id
## LR(1) items:
fpar_def -> T_id . comma_id_list T_colon fpar_type [ T_semicolon T_rparen ]
## Transitions:
-- On T_comma shift to state 13
-- On comma_id_list shift to state 29
## Reductions:
-- On T_colon
--   reduce production comma_id_list ->

State 29:
## Known stack suffix:
## T_id comma_id_list
## LR(1) items:
fpar_def -> T_id comma_id_list . T_colon fpar_type [ T_semicolon T_rparen ]
## Transitions:
-- On T_colon shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## T_id comma_id_list T_colon
## LR(1) items:
fpar_def -> T_id comma_id_list T_colon . fpar_type [ T_semicolon T_rparen ]
## Transitions:
-- On T_int shift to state 7
-- On T_char shift to state 8
-- On fpar_type shift to state 31
-- On data_type shift to state 19
## Reductions:

State 31:
## Known stack suffix:
## T_id comma_id_list T_colon fpar_type
## LR(1) items:
fpar_def -> T_id comma_id_list T_colon fpar_type . [ T_semicolon T_rparen ]
## Transitions:
## Reductions:
-- On T_semicolon T_rparen
--   reduce production fpar_def -> T_id comma_id_list T_colon fpar_type

State 32:
## Known stack suffix:
## T_fun T_id T_lparen fpar_def
## LR(1) items:
header -> T_fun T_id T_lparen fpar_def . semi_fpar_def_list T_rparen T_colon ret_type [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
-- On T_semicolon shift to state 33
-- On semi_fpar_def_list shift to state 36
## Reductions:
-- On T_rparen
--   reduce production semi_fpar_def_list ->

State 33:
## Known stack suffix:
## T_semicolon
## LR(1) items:
semi_fpar_def_list -> T_semicolon . fpar_def semi_fpar_def_list [ T_rparen ]
## Transitions:
-- On T_ref shift to state 11
-- On T_id shift to state 28
-- On fpar_def shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## T_semicolon fpar_def
## LR(1) items:
semi_fpar_def_list -> T_semicolon fpar_def . semi_fpar_def_list [ T_rparen ]
## Transitions:
-- On T_semicolon shift to state 33
-- On semi_fpar_def_list shift to state 35
## Reductions:
-- On T_rparen
--   reduce production semi_fpar_def_list ->

State 35:
## Known stack suffix:
## T_semicolon fpar_def semi_fpar_def_list
## LR(1) items:
semi_fpar_def_list -> T_semicolon fpar_def semi_fpar_def_list . [ T_rparen ]
## Transitions:
## Reductions:
-- On T_rparen
--   reduce production semi_fpar_def_list -> T_semicolon fpar_def semi_fpar_def_list

State 36:
## Known stack suffix:
## T_fun T_id T_lparen fpar_def semi_fpar_def_list
## LR(1) items:
header -> T_fun T_id T_lparen fpar_def semi_fpar_def_list . T_rparen T_colon ret_type [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
-- On T_rparen shift to state 37
## Reductions:

State 37:
## Known stack suffix:
## T_fun T_id T_lparen fpar_def semi_fpar_def_list T_rparen
## LR(1) items:
header -> T_fun T_id T_lparen fpar_def semi_fpar_def_list T_rparen . T_colon ret_type [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
-- On T_colon shift to state 38
## Reductions:

State 38:
## Known stack suffix:
## T_fun T_id T_lparen fpar_def semi_fpar_def_list T_rparen T_colon
## LR(1) items:
header -> T_fun T_id T_lparen fpar_def semi_fpar_def_list T_rparen T_colon . ret_type [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
-- On T_nothing shift to state 6
-- On T_int shift to state 7
-- On T_char shift to state 8
-- On ret_type shift to state 39
-- On data_type shift to state 10
## Reductions:

State 39:
## Known stack suffix:
## T_fun T_id T_lparen fpar_def semi_fpar_def_list T_rparen T_colon ret_type
## LR(1) items:
header -> T_fun T_id T_lparen fpar_def semi_fpar_def_list T_rparen T_colon ret_type . [ T_var T_semicolon T_lbrace T_fun ]
## Transitions:
## Reductions:
-- On T_var T_semicolon T_lbrace T_fun
--   reduce production header -> T_fun T_id T_lparen fpar_def semi_fpar_def_list T_rparen T_colon ret_type

State 40:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 41:
## Known stack suffix:
## header
## LR(1) items:
func_def -> header . local_def_list block [ T_eof ]
## Transitions:
-- On T_var shift to state 42
-- On T_fun shift to state 1
-- On var_def shift to state 50
-- On local_def_list shift to state 51
-- On local_def shift to state 137
-- On header shift to state 139
-- On func_def shift to state 141
-- On func_decl shift to state 142
## Reductions:
-- On T_lbrace
--   reduce production local_def_list ->

State 42:
## Known stack suffix:
## T_var
## LR(1) items:
var_def -> T_var . T_id comma_id_list T_colon grace_type T_semicolon [ T_var T_lbrace T_fun ]
## Transitions:
-- On T_id shift to state 43
## Reductions:

State 43:
## Known stack suffix:
## T_var T_id
## LR(1) items:
var_def -> T_var T_id . comma_id_list T_colon grace_type T_semicolon [ T_var T_lbrace T_fun ]
## Transitions:
-- On T_comma shift to state 13
-- On comma_id_list shift to state 44
## Reductions:
-- On T_colon
--   reduce production comma_id_list ->

State 44:
## Known stack suffix:
## T_var T_id comma_id_list
## LR(1) items:
var_def -> T_var T_id comma_id_list . T_colon grace_type T_semicolon [ T_var T_lbrace T_fun ]
## Transitions:
-- On T_colon shift to state 45
## Reductions:

State 45:
## Known stack suffix:
## T_var T_id comma_id_list T_colon
## LR(1) items:
var_def -> T_var T_id comma_id_list T_colon . grace_type T_semicolon [ T_var T_lbrace T_fun ]
## Transitions:
-- On T_int shift to state 7
-- On T_char shift to state 8
-- On grace_type shift to state 46
-- On data_type shift to state 48
## Reductions:

State 46:
## Known stack suffix:
## T_var T_id comma_id_list T_colon grace_type
## LR(1) items:
var_def -> T_var T_id comma_id_list T_colon grace_type . T_semicolon [ T_var T_lbrace T_fun ]
## Transitions:
-- On T_semicolon shift to state 47
## Reductions:

State 47:
## Known stack suffix:
## T_var T_id comma_id_list T_colon grace_type T_semicolon
## LR(1) items:
var_def -> T_var T_id comma_id_list T_colon grace_type T_semicolon . [ T_var T_lbrace T_fun ]
## Transitions:
## Reductions:
-- On T_var T_lbrace T_fun
--   reduce production var_def -> T_var T_id comma_id_list T_colon grace_type T_semicolon

State 48:
## Known stack suffix:
## data_type
## LR(1) items:
grace_type -> data_type . bracket_int_const_list [ T_semicolon ]
## Transitions:
-- On T_lbrack shift to state 22
-- On bracket_int_const_list shift to state 49
## Reductions:
-- On T_semicolon
--   reduce production bracket_int_const_list ->

State 49:
## Known stack suffix:
## data_type bracket_int_const_list
## LR(1) items:
grace_type -> data_type bracket_int_const_list . [ T_semicolon ]
## Transitions:
## Reductions:
-- On T_semicolon
--   reduce production grace_type -> data_type bracket_int_const_list

State 50:
## Known stack suffix:
## var_def
## LR(1) items:
local_def -> var_def . [ T_var T_lbrace T_fun ]
## Transitions:
## Reductions:
-- On T_var T_lbrace T_fun
--   reduce production local_def -> var_def

State 51:
## Known stack suffix:
## header local_def_list
## LR(1) items:
func_def -> header local_def_list . block [ T_var T_lbrace T_fun T_eof ]
## Transitions:
-- On T_lbrace shift to state 52
-- On block shift to state 136
## Reductions:

State 52:
## Known stack suffix:
## T_lbrace
## LR(1) items:
block -> T_lbrace . stmt_list T_rbrace [ T_while T_var T_string_literal T_semicolon T_return T_rbrace T_lbrace T_if T_id T_fun T_eof T_else ]
## Transitions:
-- On T_while shift to state 53
-- On T_string_literal shift to state 54
-- On T_semicolon shift to state 113
-- On T_return shift to state 114
-- On T_lbrace shift to state 52
-- On T_if shift to state 118
-- On T_id shift to state 59
-- On stmt_list shift to state 132
-- On stmt shift to state 134
-- On l_value shift to state 124
-- On func_call shift to state 128
-- On block shift to state 130
## Reductions:
-- On T_rbrace
--   reduce production stmt_list ->

State 53:
## Known stack suffix:
## T_while
## LR(1) items:
stmt -> T_while . cond T_do stmt [ T_while T_string_literal T_semicolon T_return T_rbrace T_lbrace T_if T_id T_else ]
## Transitions:
-- On T_string_literal shift to state 54
-- On T_plus shift to state 55
-- On T_not shift to state 88
-- On T_minus shift to state 56
-- On T_lparen shift to state 89
-- On T_int_const shift to state 58
-- On T_id shift to state 59
-- On T_char_const shift to state 62
-- On l_value shift to state 63
-- On func_call shift to state 65
-- On expr shift to state 106
-- On cond shift to state 111
## Reductions:

State 54:
## Known stack suffix:
## T_string_literal
## LR(1) items:
l_value -> T_string_literal . [ T_times T_then T_semicolon T_rparen T_rbrack T_prod T_plus T_or T_more T_mod T_minus T_less T_leq T_lbrack T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
## Reductions:
-- On T_times T_then T_semicolon T_rparen T_rbrack T_prod T_plus T_or T_more T_mod T_minus T_less T_leq T_lbrack T_hash T_geq T_eq T_do T_div T_comma T_and
--   reduce production l_value -> T_string_literal

State 55:
## Known stack suffix:
## T_plus
## LR(1) items:
expr -> T_plus . expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_string_literal shift to state 54
-- On T_plus shift to state 55
-- On T_minus shift to state 56
-- On T_lparen shift to state 57
-- On T_int_const shift to state 58
-- On T_id shift to state 59
-- On T_char_const shift to state 62
-- On l_value shift to state 63
-- On func_call shift to state 65
-- On expr shift to state 87
## Reductions:

State 56:
## Known stack suffix:
## T_minus
## LR(1) items:
expr -> T_minus . expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_string_literal shift to state 54
-- On T_plus shift to state 55
-- On T_minus shift to state 56
-- On T_lparen shift to state 57
-- On T_int_const shift to state 58
-- On T_id shift to state 59
-- On T_char_const shift to state 62
-- On l_value shift to state 63
-- On func_call shift to state 65
-- On expr shift to state 86
## Reductions:

State 57:
## Known stack suffix:
## T_lparen
## LR(1) items:
expr -> T_lparen . expr T_rparen [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_string_literal shift to state 54
-- On T_plus shift to state 55
-- On T_minus shift to state 56
-- On T_lparen shift to state 57
-- On T_int_const shift to state 58
-- On T_id shift to state 59
-- On T_char_const shift to state 62
-- On l_value shift to state 63
-- On func_call shift to state 65
-- On expr shift to state 84
## Reductions:

State 58:
## Known stack suffix:
## T_int_const
## LR(1) items:
expr -> T_int_const . [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
## Reductions:
-- On T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and
--   reduce production expr -> T_int_const

State 59:
## Known stack suffix:
## T_id
## LR(1) items:
func_call -> T_id . T_lparen T_rparen [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
func_call -> T_id . T_lparen expr comma_expr_list T_rparen [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
l_value -> T_id . [ T_times T_then T_semicolon T_rparen T_rbrack T_prod T_plus T_or T_more T_mod T_minus T_less T_leq T_lbrack T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_lparen shift to state 60
## Reductions:
-- On T_times T_then T_semicolon T_rparen T_rbrack T_prod T_plus T_or T_more T_mod T_minus T_less T_leq T_lbrack T_hash T_geq T_eq T_do T_div T_comma T_and
--   reduce production l_value -> T_id

State 60:
## Known stack suffix:
## T_id T_lparen
## LR(1) items:
func_call -> T_id T_lparen . T_rparen [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
func_call -> T_id T_lparen . expr comma_expr_list T_rparen [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_string_literal shift to state 54
-- On T_rparen shift to state 61
-- On T_plus shift to state 55
-- On T_minus shift to state 56
-- On T_lparen shift to state 57
-- On T_int_const shift to state 58
-- On T_id shift to state 59
-- On T_char_const shift to state 62
-- On l_value shift to state 63
-- On func_call shift to state 65
-- On expr shift to state 78
## Reductions:

State 61:
## Known stack suffix:
## T_id T_lparen T_rparen
## LR(1) items:
func_call -> T_id T_lparen T_rparen . [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
## Reductions:
-- On T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and
--   reduce production func_call -> T_id T_lparen T_rparen

State 62:
## Known stack suffix:
## T_char_const
## LR(1) items:
expr -> T_char_const . [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
## Reductions:
-- On T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and
--   reduce production expr -> T_char_const

State 63:
## Known stack suffix:
## l_value
## LR(1) items:
expr -> l_value . [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
l_value -> l_value . T_lbrack expr T_rbrack [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_lbrack T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_lbrack shift to state 64
## Reductions:
-- On T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and
--   reduce production expr -> l_value

State 64:
## Known stack suffix:
## l_value T_lbrack
## LR(1) items:
l_value -> l_value T_lbrack . expr T_rbrack [ T_times T_then T_semicolon T_rparen T_rbrack T_prod T_plus T_or T_more T_mod T_minus T_less T_leq T_lbrack T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_string_literal shift to state 54
-- On T_plus shift to state 55
-- On T_minus shift to state 56
-- On T_lparen shift to state 57
-- On T_int_const shift to state 58
-- On T_id shift to state 59
-- On T_char_const shift to state 62
-- On l_value shift to state 63
-- On func_call shift to state 65
-- On expr shift to state 66
## Reductions:

State 65:
## Known stack suffix:
## func_call
## LR(1) items:
expr -> func_call . [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
## Reductions:
-- On T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and
--   reduce production expr -> func_call

State 66:
## Known stack suffix:
## l_value T_lbrack expr
## LR(1) items:
expr -> expr . T_plus expr [ T_times T_rbrack T_plus T_mod T_minus T_div ]
expr -> expr . T_minus expr [ T_times T_rbrack T_plus T_mod T_minus T_div ]
expr -> expr . T_times expr [ T_times T_rbrack T_plus T_mod T_minus T_div ]
expr -> expr . T_div expr [ T_times T_rbrack T_plus T_mod T_minus T_div ]
expr -> expr . T_mod expr [ T_times T_rbrack T_plus T_mod T_minus T_div ]
l_value -> l_value T_lbrack expr . T_rbrack [ T_times T_then T_semicolon T_rparen T_rbrack T_prod T_plus T_or T_more T_mod T_minus T_less T_leq T_lbrack T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_times shift to state 67
-- On T_rbrack shift to state 69
-- On T_plus shift to state 70
-- On T_mod shift to state 72
-- On T_minus shift to state 76
-- On T_div shift to state 74
## Reductions:

State 67:
## Known stack suffix:
## expr T_times
## LR(1) items:
expr -> expr T_times . expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_string_literal shift to state 54
-- On T_plus shift to state 55
-- On T_minus shift to state 56
-- On T_lparen shift to state 57
-- On T_int_const shift to state 58
-- On T_id shift to state 59
-- On T_char_const shift to state 62
-- On l_value shift to state 63
-- On func_call shift to state 65
-- On expr shift to state 68
## Reductions:

State 68:
## Known stack suffix:
## expr T_times expr
## LR(1) items:
expr -> expr . T_plus expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
expr -> expr . T_minus expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
expr -> expr . T_times expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
expr -> expr T_times expr . [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
expr -> expr . T_div expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
expr -> expr . T_mod expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
## Reductions:
-- On T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and
--   reduce production expr -> expr T_times expr

State 69:
## Known stack suffix:
## l_value T_lbrack expr T_rbrack
## LR(1) items:
l_value -> l_value T_lbrack expr T_rbrack . [ T_times T_then T_semicolon T_rparen T_rbrack T_prod T_plus T_or T_more T_mod T_minus T_less T_leq T_lbrack T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
## Reductions:
-- On T_times T_then T_semicolon T_rparen T_rbrack T_prod T_plus T_or T_more T_mod T_minus T_less T_leq T_lbrack T_hash T_geq T_eq T_do T_div T_comma T_and
--   reduce production l_value -> l_value T_lbrack expr T_rbrack

State 70:
## Known stack suffix:
## expr T_plus
## LR(1) items:
expr -> expr T_plus . expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_string_literal shift to state 54
-- On T_plus shift to state 55
-- On T_minus shift to state 56
-- On T_lparen shift to state 57
-- On T_int_const shift to state 58
-- On T_id shift to state 59
-- On T_char_const shift to state 62
-- On l_value shift to state 63
-- On func_call shift to state 65
-- On expr shift to state 71
## Reductions:

State 71:
## Known stack suffix:
## expr T_plus expr
## LR(1) items:
expr -> expr . T_plus expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
expr -> expr T_plus expr . [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
expr -> expr . T_minus expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
expr -> expr . T_times expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
expr -> expr . T_div expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
expr -> expr . T_mod expr [ T_times T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_mod T_minus T_less T_leq T_hash T_geq T_eq T_do T_div T_comma T_and ]
## Transitions:
-- On T_times shift to state 67
-- On T_mod shift to state 72
-- On T_div shift to state 74
## Reductions:
-- On T_then T_semicolon T_rparen T_rbrack T_plus T_or T_more T_minus T_less T_leq T_hash T_geq T_eq T_do T_comma T_and
--   reduce production expr -> expr T_plus expr
